
2004/12/05: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- added I18N module (just a simple helper for some I18N issues)
  When setting a locale the given locale is also stored in it generalized
  forms, e.g.:
    de_DE@euro is stored as:
    - de_DE@euro
    - de_DE
    - de
- added I18N to plugin descriptions (uses the property "lang" in "plugin"
  tags). Every current locale is tried. If there is no plugin description
  in the current language the default description is used.
- added generic plugin management. This will be used by new plugins
  (in AqBanking and AqHBCI) and maybe in Gwen 2.x for DBIO plugins.
- StringList: Added reference counter to StringListEntry.
  When adding or inserting a string via GWEN_StringList_AppendString or
  GWEN_StringList_InsertString and double checking is enabled then the
  reference counter of a string is incremented if the string to be added or
  inserted is already in the list.
  The default behaviour of GWEN_StringList_RemoveString is the same as before:
  It removes a matching string regardless of its reference counter.
  However, if GWEN_StringList_SetIgnoreRefCount() is called with a null
  argument only those strings are removed whose reference counter reaches
  zero.
- fslock.c: added fallback mechanism for file systems which do not support the
  link() function. Use open() with O_EXCL flag on those systems instead.
  This should also work with FAT or other file systems which do not support
  link().


2004/12/04: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- implemented FSLock at least for POSIX the way "man 2 open" suggests.
  This should now also work on NFS shares.


2004/12/03: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- added simple file/folder locking mechanism
- started working on filters for GWEN_BUFFEREDIO. I used these kind of filters